<resources>
    <string name="app_name">Affinity</string>
    <string name="title_explorer">Explorer</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_settings">Settings</string>
    <string name="title_experiment">Experiment</string>

    <string name="pref_version_key">pref_version</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_share_key">pref_share</string>
    <string name="pref_rate_again_key">pref_rate_again</string>
    <string name="pref_clear_ratings_key">pref_clear_ratings</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="search_hint">Search by movie title</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="director">Director</string>
    <string name="actors">Actors</string>
    <string name="writers">Writers</string>
    <string name="title_recommended">Recommendations</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="reject">Reject</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_movies">Movies</string>
    <string name="profile">Profile</string>
    <string name="msg_no_recommendations">No recommendations</string>
    <string name="title_activity_search">Movie Search</string>
    <string name="rating">Rating</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_initial_rating">InitialRatingActivity</string>
    <string name="text_continue">Continue</string>
    <string name="finished">Finished</string>
    <string name="rate_movies_you_liked">Rate %1d titles you liked</string>
    <string name="delete">Delete</string>
    <string name="clear_ratings">Clear Ratings</string>
    <string name="clear_ratings_message">Are you sure you want to delete all ratings from nearby users?</string>
    <string name="yes_im_sure">Yes, I am sure!</string>
    <string name="cleared_ratings_from_nearby_users">Cleared ratings from nearby users!</string>
    <string name="cleared_own_ratings">Cleared own ratings!</string>
    <string name="clear_own_ratings_message">Are you sure you want to delete all of your ratings?</string>
    <string name="turn_on">Activate</string>
    <string name="turn_off">Deactivate</string>
    <string name="sharing_disabled">Sharing deactivated</string>
    <string name="turn_it_on_to_receive_ratings_from_other_users">Activate sharing to collect ratings from nearby users
    </string>
    <string name="rated_titles">Rated Titles</string>
    <string name="refresh">Refresh</string>
    <string name="no_recommendations_available">No recommendations available. Collect more ratings.</string>
    <string name="new_recommendations_available">New recommendations available! Please refresh.</string>
    <string name="your_rating">Your Rating</string>
    <string name="metascore">Metascore</string>
    <string name="rate_this">Rate This</string>
    <string name="recommendations_are_automatically_generated_for_you">Collect more ratings to show recommendations
    </string>
    <string name="share_ratings">Share Ratings</string>
    <string name="show_experiments_menu">Show experiments menu</string>
    <string name="pref_experiments_menu_key">pref_experiments_menu_key</string>
    <string name="pref_context_sensing_key">pref_context_sensing_key</string>
    <string name="pref_privacy_regions_enabled_key">pref_privacy_regions_enabled_key</string>
    <string name="pref_privacy_regions_enabled_title">Enable privacy regions</string>
    <string name="pref_privacy_regions_enabled_summary">If disabled, the app will share ratings wherever you are</string>
    <string name="pref_is_service_running">pref_is_service_running</string>
    <string name="pref_context_sensing_summary">Enable to save battery</string>
    <string name="pref_context_sensing_title">Context sense sharing</string>
    <string name="pref_export">pref_export</string>
    <string name="clear_own_ratings">Delete Profile</string>
    <string name="clears_all_your_movie_ratings">Delete all your movie ratings</string>
    <string name="clears_database_removing_ratings_of_other_users">Delete all ratings you collected from nearby users</string>
    <string name="clear_nearby_ratings">Delete Database</string>
    <string name="generate_csv_and_send">Export the ratings you collected from nearby users</string>
    <string name="export_data">Export Data</string>
    <string name="all_ratings_in_the_database_will_be_exported">All ratings in the database will be exported</string>
    <string name="no_results">No results</string>
    <string name="pref_own_ratings">pref_own_ratings</string>
    <string name="pref_external_ratings">pref_external_ratings</string>
    <string name="pref_privacy_regions_key">pref_privacy_regions</string>
    <string name="pref_privacy_regions_title">Privacy regions</string>
    <string name="pref_privacy_regions_summary">Define regions where you would like to share your data</string>

    <string name="geofence_insufficient_location_permission">The client does not have sufficient location permission to perform geofencing operations</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_request_too_frequent">Your app has been adding Geofences too frequently</string>
    <string name="geofence_too_many_geofences">Your app has registered more than 100 geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided more than 5 different PendingIntents to the addGeofences call</string>
    <string name="geofence_unknown_geofence_error">Unknown Geofence error</string>
    <string name="pref_sharing_region_recommendations_key">pref_sharing_region_recommendations</string>
    <string name="pref_sharing_region_recommendations_summary">Review sharing region recommendations</string>
    <string name="pref_sharing_region_recommendations_title">Sharing region recommendations</string>
    <string name="pref_privacy_regions_settings_key">pref_privacy_regions_settings</string>
    <string name="pref_privacy_regions_settings_title">Privacy Settings</string>
    <string name="pref_privacy_regions_settings_summary">Configure where you want to share your ratings</string>
</resources>
